--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,62 @@ html {
   box-sizing: inherit;
 }
 
-div {
+div{
   padding: .5rem;
   text-align: center;
+}
+
+.btn {
+  background-color: #666;
+  color: #fff;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.btn-subtle {
+  background-color: #ccc;
+  color: #fff;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.btn-goast {
+  background-color: #fff;
+  color: #000;
+  padding: .4em .75em .3em;
+  border: solid 3px #000;
+  border-radius: 8px;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.btn-warning {
+  background-color: #f33;
+  color: #fff;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.btn:hover {
+  background-color: #333;
+}
+
+.btn-subtle:hover {
+  background-color: #666;
+}
+
+.btn-goast:hover {
+  background-color: #666;
+  color: #fff;
+  border: solid 3px #666;
+}
+
+.btn-warning:hover {
+  background-color: #933;
 }
