--- a/css/main.css
+++ b/css/main.css
@@ -7,60 +7,97 @@ html {
   box-sizing: inherit;
 }
 
-div{
+div {
   padding: .5rem;
   text-align: center;
 }
 
-.btn {
-  background-color: #666;
-  color: #fff;
-  padding: .4em .75em .3em;
-  border-radius: 8px;
+a {
   text-decoration: none;
+}
+
+li {
+  padding: .5rem;
+}
+
+ul {
+  list-style: none;
+}
+
+.btn {
+  padding-top: .4em;
+  padding-left: .4em;
+  padding-bottom: .4em;
+  padding-right: .4em;
+  border-radius: 8px;
+  font-size: 1.25rem;
+  display: inline-block;
+}
+
+.btn-small {
+  font-size: .875rem;
+}
+
+.small-info {
+  padding-top: .75em;
+  padding-left: .75em;
+  padding-bottom: .75em;
+  padding-right: .75em;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.btn-big {
   font-size: 1.5rem;
+}
+
+.big-info {
+  padding-top: .4em;
+  padding-left: .4em;
+  padding-bottom: .4em;
+  padding-right: .4em;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.btn-primary {
+  background-color: #333;
+  color: #fff;
+  display: inline-block;
 }
 
 .btn-subtle {
   background-color: #ccc;
   color: #fff;
-  padding: .4em .75em .3em;
-  border-radius: 8px;
-  text-decoration: none;
-  font-size: 1.5rem;
 }
 
-.btn-goast {
+.btn-ghost {
   background-color: #fff;
   color: #000;
-  padding: .4em .75em .3em;
-  border: solid 3px #000;
-  border-radius: 8px;
-  text-decoration: none;
-  font-size: 1.5rem;
+}
+
+.btn-ghost-more {
+  padding-top: .2em;
+  padding-bottom: .2em;
+  border: 3px solid #000;
 }
 
 .btn-warning {
   background-color: #f33;
   color: #fff;
-  padding: .4em .75em .3em;
-  border-radius: 8px;
-  text-decoration: none;
-  font-size: 1.5rem;
 }
 
 .btn:hover {
-  background-color: #333;
+  background-color: #000;
 }
 
 .btn-subtle:hover {
   background-color: #666;
 }
 
-.btn-goast:hover {
+.btn-ghost:hover {
   background-color: #666;
   color: #fff;
-  border: solid 3px #666;
 }
 
 .btn-warning:hover {
